--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "node": "^14.13.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-scroll": "^1.8.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
