--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "LDesignWebsite",
   "private": true,
+  "proxy": "http://localhost:3000",
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
@@ -14,6 +15,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "gatsby": "^2.24.66",
     "node": "^14.13.1",
