--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
-    "dotenv-safe": "^8.2.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.66",
     "node": "^14.13.1",
     "react": "^16.12.0",
