--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION=mongodb+srv://User123:Rhino123@rest.uej8p.mongodb.net/rest?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://User123:Rhino123@rest.uej8p.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
